[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "betocq"
version = "3.0.0"
description = "Better Together Connectivity Quality test suite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mobly==1.13",
  "mobly-android-partner-tools",
  "mobly-wifi==1.2.0",
]

[project.scripts]
betocq_onboarding_test_suite = "betocq.nearby_connection.betocq_onboarding_test_suite:main"
betocq_auto_test_suite = "betocq.nearby_connection.betocq_android_auto_test_suite:main"
betocq_aqt_test_suite = "betocq.nearby_connection.betocq_aqt_test_suite:main"


[project.urls]
Homepage = "https://github.com/android/betocq"

[tool.setuptools.packages.find]
include = ["betocq*"]
